Set preferred agent

--- a/part1/Jenkinsfile
+++ b/part1/Jenkinsfile
@@ -1,7 +1,9 @@
 #!/usr/bin/groovy
 
 pipeline {
-    agent any
+    agent {
+	label 'ssh-agent'
+	}
 
     options {
         disableConcurrentBuilds()
