--- a/part1/Jenkinsfile
+++ b/part1/Jenkinsfile
@@ -44,7 +44,7 @@ def deploy(environment) {
 		System.exit(0)
 	}
 
-	sh "docker ps -f name=${containerName} -q | xargs --no-run-if-empty docker stop"
-	sh "docker ps -a -f name=${containerName} -q | xargs -r docker rm"
-	sh "docker run -d -p ${port}:5000 --name ${containerName} hands-on-jenkins/myapp:${BUILD_NUMBER}"
+	sh "sudo docker ps -f name=${containerName} -q | xargs --no-run-if-empty docker stop"
+	sh "sudo docker ps -a -f name=${containerName} -q | xargs -r docker rm"
+	sh "sudo docker run -d -p ${port}:5000 --name ${containerName} hands-on-jenkins/myapp:${BUILD_NUMBER}"
 }
